2008-01-05  Guido Diepen <guido@guidodiepen.nl>

	* Added support for locked WM6 devices. Odccm initiates unlock procedure
	  upon connection of device.

2007-11-29  Mark Ellis <mark@mpellis.org.uk>

	* build legacy support by default

2007-11-25  Mark Ellis <mark@mpellis.org.uk>

	* when running in background, send messages to syslog
	
2007-11-11  Mark Ellis <mark@mpellis.org.uk>

	* improve backgrounding in odccm.c
	* device-legacy to emit disconnect signal when ping reply overdue
	* device-legacy fixes to connection requests, minor fixes
	* device-legacy use IP as dbus path and guid, not name

2007-07-31  Mark Ellis <mark@mpellis.org.uk>

	* added command options for ip configuration

2007-07-04  Mark Ellis <mark@mpellis.org.uk>

	* Added support for pre WM5 devices